--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ceed_t1e1.jar
+dist.jar=${dist.dir}/ceedt1e1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -52,7 +52,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ceed_t1e1.Ceed_t1e1
+main.class=ceedt1e1.Ceedt1e1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
